# FlashAttention

./: CMakeLists.txt  README.md
include/: attention_kernel.cuh  cublas_handle.cuh  flash_attention_kernel.cuh  flash_attention_kernel_simt.cuh  flash_attention_kernel_tensor_op.cuh  softmax_kernel.cuh  utils.cuh
src/: main.py
src/csrc/include/: attention_kernel.cuh  flash_attention_simt_kernel.cuh  flash_attention_tensor_op_kernel.cuh
src/csrc/kernel/: attention_kernel.cu  flash_attention_kernel.cu  flash_attention_kernel_simt.cu  flash_attention_kernel_tensor_op.cu  softmax_kernel.cu
src/csrc/src/: cublas_handle.cu
src/csrc/src/kernel/: attention_binding.cpp  attention_kernel.cu  flash_attention_simt_binding.cpp  flash_attention_simt_kernel.cu  flash_attention_tensor_op_binding.cpp  flash_attention_tensor_op_kernel.cu
